[tool.poetry]
name = "keysproject"
version = "0.1.0"
description = ""
authors = ["sairam4123 <kannanscoffee@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
ruff = "^0.0.254"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
